<resources>
    <string name="app_name">Weather Forecast Android</string>
    <string name="todo">Enter City Name In SearchView Nav And click Submit Button</string>
    <string name="click_to_fetch_data">click to Fetch Data</string>
    <string name="city_name">City Name</string>
    <string name="menu_search">search</string>
    <string name="menu_option">Proxy Options</string>
    <string name="hint_proxy">IP: 46.243.220.234</string>
    <string name="hint_port">PORT: 8118</string>
    <string name="help">help</string>
    <string name="socks_protocol">SOCKS</string>
    <string name="http_protocol">HTTP</string>
    <string name="protocol_type">Protocol Type</string>
    <string name="use_proxy">Use Proxy</string>
    <string name="today">sunday</string>
    <string name="wind_speed">wind speed</string>
    <string name="description">Partly Cloudy</string>
    <string name="temperature">15°c</string>
    <string name="not_found">NOT FOUND!</string>
    <string name="desc_intro">Enter area name in SearchView in toolbar to fetch Weather Forecast information </string>
</resources>

