<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/option_bar"
        android:icon="@drawable/ic_dots"
        android:orderInCategory="101"
        android:title="@string/menu_option"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_option"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"
                app:showAsAction="ifRoom" />

        </menu>

    </item>
</menu>